# artemisia

./: .gitignore  Cargo.toml  README.md
astria_render/: Cargo.toml
astria_render/src/: lib.rs  shader.wgsl
aurion_core/: Cargo.toml
aurion_core/src/: lib.rs  node_factory.rs
aurion_plugins/: Cargo.toml
aurion_std_nodes/: Cargo.toml
aurion_std_nodes/src/: factories.rs  filters.rs  lib.rs
meridian_document/: Cargo.toml
meridian_document/src/: blend.rs  history.rs  lib.rs  serialization.rs
polaris_app/: Cargo.toml
polaris_app/src/: main.rs
solaris_ui_desktop/: Cargo.toml
solaris_ui_desktop/src/: main.rs  node_editor.rs  ui.rs  viewport.rs  xilem_app.rs
solaris_ui_desktop/src/node_editor/: editor.rs  mod.rs  node_types.rs
