[package]
name = "aurion_core"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
petgraph = { workspace = true }
parking_lot = "0.12"
anyhow = "1.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
lazy_static = "1.4"
