[package]
name = "aurion_std_nodes"
version = "0.1.0"
edition = "2021"

[dependencies]
aurion_core = { path = "../aurion_core" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
