[package]
name = "meridian_document"
version = "0.1.0"
edition = "2021"

[dependencies]
aurion_core = { path = "../aurion_core" }
aurion_std_nodes = { path = "../aurion_std_nodes" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
parking_lot = "0.12"
image = "0.24"
