[package]
name = "solaris_ui_desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
aurion_core = { path = "../aurion_core" }
aurion_std_nodes = { path = "../aurion_std_nodes" }
meridian_document = { path = "../meridian_document" }
xilem = { workspace = true }
masonry = { workspace = true }
vello = { workspace = true }
parley = { workspace = true }
anyhow = "1.0"
parking_lot = "0.12"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
winit = "0.30"
